# HunterXJob

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: applications.py  automation.py  health.py  jobs.py  profile.py  reports.py  resume.py  settings_router.py
backend/app/services/: browser_runtime.py  content_generation.py  email_monitor.py  matching.py  qa_bank.py  resume_render.py  runtime_settings.py  safety.py  scheduler.py
backend/app/services/llm/: base.py  (+3 more)
backend/app/templates/: cover_letter.html.j2  resume.html.j2
backend/tests/: conftest.py  test_api_applications.py  test_api_jobs.py  test_automation_safety.py  test_browser_runtime.py  test_greenhouse_form_resolution.py  test_job_sources.py  test_matching.py  test_qa_bank.py  test_resume_render.py
docs/: ARCHITECTURE.md
mobile/: README.md  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  settings.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx
mobile/src/: theme.ts  types.ts
mobile/src/api/: client.ts
mobile/src/components/: Badge.tsx  CloseButton.tsx  DemoDataBanner.tsx  PrimaryButton.tsx  ScreenContainer.tsx  SettingsButton.tsx  StatCard.tsx  StatusViews.tsx
mobile/src/hooks/: useApiResource.ts
mobile/src/mock/: data.ts
mobile/src/store/: dataCache.ts  settings.ts
mobile/src/utils/: format.ts
scripts/: test-all.sh
v2/: .env.example  README.md  hunterx  pyproject.toml
v2/app/: __init__.py  adapters.py  ai.py  ai_client.py  config.py  db.py  discovery.py  main.py  models.py  pipeline.py
v2/scripts/: doctor.sh  install.sh  start.sh  stop.sh
v2/tests/: test_pipeline.py
(+21 files in other folders)
